some content added in css and html

--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ code {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.container{
+.center_container{
   width: 1280px;
   margin: auto;
 }
