--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -42,3 +42,13 @@ overflow: hidden;
 opacity: 0.7;
 transition: 550ms;
 }
+
+@media screen and (max-width:768px) {
+    .home_category{
+        width: 100%;
+        height: 150px;
+    }
+    .slick-prev:before,.slick-arrow.slick-next,.slick-next:before,.slick-arrow.slick-next{
+        display: none !important;
+    }
+}
