--- a/src/components/CSS/CSS.css
+++ b/src/components/CSS/CSS.css
@@ -13,6 +13,15 @@
     width: 400px;
     object-fit: contain;
 }
+.css_tips{
+    width: 100%;
+    height: 400px;
+}
+
+.css_tips video{
+    height: 400px;
+    width: 100%;
+}
 
 
 @media screen and (max-width:768px) {
@@ -29,5 +38,14 @@
         height: 430px;
         width: 100%;
         object-fit: contain;
+    }
+    .css_tips{
+        width: 100%;
+        height: 400px;
+    }
+    
+    .css_tips video{
+        height: 300px;
+        width: 100%;
     }
 }
