--- a/src/components/FAQ/FAQ.css
+++ b/src/components/FAQ/FAQ.css
@@ -1,10 +1,18 @@
 .faq_container{
     min-height: 100vh;
+    width: 100%;
 }
 
 .faq{
     color: white;
+    width: 100%;
 }
 .faq:hover{
     cursor: pointer;
 }
+
+.faq_answer{
+    width: 100%;
+}
+
+
